updated the projects

--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
             <p>
                 Here is a list of projects I have been working on.
                 <li>
-                    <a href="https://github.com/EvanSterlingMiller/prework-study-guide">Prework Study Guide</a>
-                  </li>
-                  <li>
-                    <a href="https://github.com/EvanSterlingMiller/Challenge1-Horiseon">Website Accessibility</a>
-                  </li>
+                  <a href="https://github.com/EvanSterlingMiller/Gig_Guide">Gig Guide</a>
+                </li>
+                <li>
+                  <a href="https://github.com/EvanSterlingMiller/Password_Generator">Password Generator</a>
+                </li>
+                <li>
+                  <a href="https://github.com/EvanSterlingMiller/work_day_scheduler">Word Day Scheduler</a>
+                </li>
             </p>
           </div>   
         </section>
